# dictionary

./: .gitignore  README.md  default.nix  dictionary.toml  fixer.js  flake.nix  pyproject.toml  requirements.txt  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ch00-00-introduction.md  ch01-00-getting-started.md  ch01-01-installation.md  ch01-02-hello-world.md  ch01-03-hello-cargo.md  ch02-00-guessing-game-tutorial.md  ch03-00-common-programming-concepts.md  ch03-01-variables-and-mutability.md  ch03-02-data-types.md  ch03-03-how-functions-work.md  ch03-04-comments.md
locale/: Decibels.main.uz.po  LocalSearch.main.uz.po  TinySPARQL.main.uz.po  at-spi2-core.gnome-49.uz.po  baobab.main.uz.po  calls.main.uz.po  console.gnome-49.uz.po  d-spy.main.uz.po  epiphany.main.uz.po  gdk-pixbuf.master.uz.po  gdm.main.uz.po  glib-networking.master.uz.po  gnome-boxes.main.uz.po  gnome-calendar.gnome-49.uz.po  gnome-characters.main.uz.po  gnome-clocks.master.uz.po  gnome-connections.gnome-49.uz.po  gnome-contacts.main.uz.po  gnome-control-center.gnome-49.uz.po  gnome-desktop.master.uz.po  gnome-disk-utility.gnome-46.uz.po  gnome-initial-setup.master.uz.po  gnome-keyring.main.uz.po  gnome-maps.gnome-49.uz.po  gnome-menus.master.uz.po  gnome-music.gnome-49.uz.po  gnome-online-accounts.master.uz.po  gnome-remote-desktop.master.uz.po  gnome-session.main.uz.po  gnome-settings-daemon.main.uz.po  gnome-shell.main.uz.po  gnome-software.main.uz.po  gnome-system-monitor.main.uz.po  gnome-text-editor.main.uz.po  gnome-weather.main.uz.po  gsettings-desktop-schemas.main.uz.po  gspell.master.uz.po  gtk-properties.gtk-3-24.uz.po  gtk.gtk-3-24.uz.po  gtk.gtk-4-20.uz.po  (+20 more)
po/: Decibels.main.uz.po  LocalSearch.main.uz.po  TinySPARQL.main.uz.po  appstream.master.uz.po  at-spi2-core.gnome-49.uz.po  baobab.main.uz.po  calls.main.uz.po  console.gnome-49.uz.po  d-spy.main.uz.po  dconf-editor.master.uz.po  epiphany.main.uz.po  folks.main.uz.po  gcr.main.uz.po  gdk-pixbuf.master.uz.po  gdm.main.uz.po  glib-networking.master.uz.po  gnome-bluetooth.master.uz.po  gnome-boxes.main.uz.po  gnome-calendar.gnome-49.uz.po  gnome-characters.main.uz.po  gnome-clocks.master.uz.po  gnome-color-manager.gnome-47.uz.po  gnome-contacts.main.uz.po  (+52 more)
(+262 files in other folders)
