[project]
name = "dictionary"
version = "0.1.0"
description = ""
authors = [
    {name = "bahrom04",email = "magdiyevbahrom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polib (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
