[project.urls]
Homepage = "https://github.com/uzbek-net/dictionary"
Documentation = "https://github.com/uzbek-net/dictionary"
Repository = "https://github.com/uzbek-net/dictionary"
Issues = "https://github.com/uzbek-net/dictionary/issues"
Changelog = "https://github.com/uzbek-net/dictionary/commits/main/"

[project]
name = "uzbek_net_dictionary"
version = "0.1.0"
description = "uzbek dictionary for various translations, including GNOME"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0"
keywords = ["dictionary", "uzbek"]
authors = [
    {name = "uzbek-net", email = "magdiyevbahrom@gmail.com"}
]
maintainers = [
  {name = "bahrom04", email = "magdiyevbahrom@gmail.com"}
]

dependencies = [
  "toml",
  "polib",
  "requests",
]

[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
uzbek_net_dictionary = "uzbek_net_dictionary.__main__:main"

[tool.setuptools]
# Only include the specific package folder
packages = ["uzbek_net_dictionary"]